# GameOfLife

./: .gitignore  CITATION.txt  CMakeLists.txt  LICENCE.txt  README.md  README.txt  config.yml  config_graph.yml  create_performance_graph.sh  legion_build_run_fetch.sh  legion_pipeline.sh  make_graph.py  make_video.py  test_pipeline.sh  test_script.sh
deploy/: legion.py  legion.sh  legion.sh.mko  legion_test.sh.mko
example_results/: GameOfLife.o885455  GameOfLife.o903271  GameOfLife.o909688  GameOfLife.pe903271  GameOfLife.po903271  GoL_video_sample.mov  config.yml  output.txt  time.txt
src/: CMakeLists.txt  World.cpp  World.cu  World.h  functors.h  main.cpp  main.cu  tools.h
test/: CMakeLists.txt  test_cases.cpp  test_cases.cu  test_main.cpp
